@@ -29,6 +29,7 @@ requires:
   Class::Utils: 0
   Error::Pure: 0.3
   Pod::Abstract: 0
+  String::UpdateYears: 0
   perl: 5.6.2
 resources:
   bugtracker: https://github.com/michal-josef-spacek/Pod-CopyrightYears/issues
